# armoury-tui

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  armoury  install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_report.md
.github/workflows/: ci.yml
armoury_tui/: __init__.py  __main__.py  app.py  control.py  render.py  scanner.py  styles.tcss  sysfs.py  telemetry.py  themes.py
rust/: Cargo.toml
rust/src/: app.rs  config.rs  control.rs  dbus.rs  main.rs  render.rs  scanner.rs  sysfs.rs  telemetry.rs  theme.rs
rust/tests/: cli_test.rs
